# hackairound1

./: .gitignore  README.md  pyproject.toml  uagents_detection.py
.fleet/: run.json
src/: main.py
src/agents/tempy/: tempy.py
